[package]
name = "collections-service-tests"
autobins = true
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.22"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
log = "0.4"
simple_logger = "2"
uuid = "0.8"